--- a/libs/weui.wxss
+++ b/libs/weui.wxss
@@ -7,9 +7,9 @@ icon {
 }
 .weui-cells {
   position: relative;
-  margin-top: 1.17647059em;
-  background-color: #FFFFFF;
-  line-height: 1.41176471;
+  margin-top: 1.2em;
+  background-color: #D9D9D9;
+  line-height: 1.4;
   font-size: 34rpx;
 }
 .weui-cells:before {
@@ -51,7 +51,8 @@ icon {
   font-size: 28rpx;
 }
 .weui-cell {
-  padding: 20rpx 30rpx;
+  padding: 30rpx 20rpx 30rpx;
+  border-radius: 30rpx;
   position: relative;
   word-wrap: break-word;
   display: -webkit-box;
