--- a/pages/index/f_Role/f_Role.wxml
+++ b/pages/index/f_Role/f_Role.wxml
@@ -1,32 +1,14 @@
 <import src="../../../libs/weimport.wxml" />
 <view class="page" id="approval-{{pNo}}">
   <form bindsubmit="fSubmit">
-    <view class="page__bd" id="{{targetId}}">
-      <block wx:for="{{reqData}}" wx:key="index">
-        <template is="i_{{item.t}}" data="{{...item,n:index,c:vData[item.gname]}}"></template>
-      </block>
-    </view>
-    <view class="page__bd page__bd_spacing">
-        <view class="kind-list">
-            <block wx:for="{{list}}" wx:key="id">
-                <view class="kind-list__item">
-                    <view id="{{item.id}}" class="weui-flex kind-list__item-hd {{item.open ? 'kind-list__item-hd_show' : ''}}" bindtap="kindToggle">
-                        <view class="weui-flex__item">{{item.name}}</view>
-                        <image class="kind-list__img" src="images/icon_nav_{{item.id}}.png"></image>
-                    </view>
-                    <view class="kind-list__item-bd {{item.open ? 'kind-list__item-bd_show' : ''}}">
-                        <view class="weui-cells {{item.open ? 'weui-cells_show' : ''}}">
-                            <block wx:for="{{item.pages}}" wx:for-item="page" wx:key="*this">
-                                <navigator url="{{page}}/{{page}}" class="weui-cell weui-cell_access">
-                                    <view class="weui-cell__bd">{{page}}</view>
-                                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-                                </navigator>
-                            </block>
-                        </view>
-                    </view>
-                </view>
-            </block>
-        </view>
+    <view class="page__bd page__bd_spacing" id="{{targetId}}">
+      <view class="kind-list">
+        <block wx:for="{{reqData}}" wx:key="index">
+          <view class="kind-list__item">
+            <template is="i_{{item.t}}" data="{{...item,n:index,c:vData[item.gname]}}"></template>
+          </view>
+        </block>
+      </view>
     </view>
     <view hidden="{{unEdit}}" class="page__ft" id="{{dObjectId}}">
       <button class="weui-btn" id="fSave" formType="submit">提交</button>
