--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -465,8 +465,8 @@
       <view wx:for="{{p}}" wx:key="{{index}}"><view class="weui-table_th">item</view></view>
     </view>
     <view hidden="{{inclose}}">
-      <view wx:for="{{c}}" wx:key="{{index}}" wx:for-index="i" wx:for-item="c">
-        <block  wx:for="{{c[i]}}" wx:key="{{index}}">
+      <view wx:for="{{c}}" wx:key="{{index}}" wx:for-index="i" wx:for-item="ci">
+        <block  wx:for="{{ci[i]}}" wx:key="{{index}}">
           <view clase="weui-table_tr" class="weui-table_td {{i%2 ==0 ? 'weui-table_bw' : ''}}">item</view>
         </block>
       </view>
