--- a/pages/index/addresslist/addresslist.wxml
+++ b/pages/index/addresslist/addresslist.wxml
@@ -1,2 +1,21 @@
-<!--pages/customer/addresslist/addresslist.wxml-->
-<text>pages/customer/addresslist/addresslist.wxml</text>
+<import src="../../libs/weimport.wxml" />
+<import src="../../libs/wedetail.wxml"/>
+<view class="page">
+  <block wx:for="{{vData}}" wx:key="{{index}}" wx:for-item="uu" wx:for-index="i">
+    <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="uu-{{i}}" bindtap="accheck">
+      <template is="{{ achecked==i ? 'selecticon1' : 'selecticon2'}}" />
+      <view class="weui-cell__ft weui-cell__ft_in-access">{{uu.uName}}</view>
+    </view>
+    <view hidden="{{achecked!=i}}" wx:for="{{uu.unitUsers}}" wx:key="{{index}}" wx:for-index="j" wx:for-item="user">
+      <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
+        <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+          <image class="weui-media-box__thumb" src="{{user.avatarUrl}}" background-size="cover"></image>
+        </view>
+        <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+          <view class="weui-media-box__title">{{user.userRolName}}</view>
+          <view class="weui-media-box__desc">{{user.uName}}({{user.nickName}})</view>
+        </view>
+      </view>
+    </view>
+  </block>
+</view>
