--- a/pages/lprocedures/lprocedures.wxml
+++ b/pages/lprocedures/lprocedures.wxml
@@ -7,7 +7,7 @@
     <template is="tabPanel" data="{{ tPage: fLength ? mPage[pageCk] : mPage , pageData , pNo }}"/>
   </view>
   <view class="page__ft">
-    <navigator url="/pages/fprocedure/fprocedure?pNo={{pNo}}&artId={{objectId}}">
+    <navigator url="/pages/fprocedure/fprocedure?pNo={{pNo}}&artId={{dobjectId}}">
       <button class="weui-btn" type="primary" size="default">新建</button>
     </navigator>
   </view>
