--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -61,21 +61,23 @@
 </template>
 
 <template name="s_pics">
-  <view class="swiper_box">
-    <swiper class="swiper_box" indicator-dots="{{false}}" autoplay="{{true}}">
-      <block wx:for="{{c}}" wx:key="{{index}}">
-        <image src="{{item}}" class="swimage"></image>
-      </block>
-    </swiper>
-  </view>
+  <swiper class="swiper_box" indicator-dots="{{false}}" autoplay="{{true}}">
+    <block wx:for="{{c}}" wx:key="{{index}}">
+      <swiper-item>
+          <image src="{{item}}" class="swimage"></image>
+        </swiper-item>
+    </block>
+  </swiper>
 </template>
 
 <template name="i_pics">
-  <view class="swiper_box" id="ac-{{n}}" bindtap="i_pics">
+  <view id="ac-{{n}}" bindtap="i_pics">
     <view class="swtext">{{p}}:</view>
     <swiper class="swiper_box" indicator-dots="{{false}}" autoplay="{{true}}">
       <block wx:for="{{c}}" wx:key="{{index}}">
-        <image src="{{item}}" class="swimage"></image>
+        <swiper-item>
+          <image src="{{item}}" class="swimage"></image>
+        </swiper-item>
       </block>
     </swiper>
   </view>
@@ -304,7 +306,7 @@
 
 <template name="i_vidio">
   <view class="weui-article__-4">
-    <view hidden="{{c}}" id="ac-{{n}}" bindtap="i_vidio">{{p}}(点此处更换视频)</view>
+    <view id="ac-{{n}}" bindtap="i_vidio">{{p}}(点此处更换视频)</view>
     <video src="{{c ? c : 'http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400'}}" controls></video>
     <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
   </view>
