--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -74,7 +74,7 @@
   <view id="ac-{{n}}" bindtap="i_pics">
     <view class="swtext">{{p}}:</view>
     <swiper class="swiper_box" indicator-dots="{{false}}" autoplay="{{true}}">
-      <block wx:for="{{c}}" wx:key="{{index}}">
+      <block wx:for="{{c ? c : ['https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/790f500d14e467fe28e3.jpg','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/ff933806fce411614341.jpg','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/c4b4edf57363e801162c.jpg','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/4827cf0d996f80a86266.JPG','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/d5140a5a494b03139854.jpg','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/42e17b8efd6a01896496.JPG'] }}" wx:key="{{index}}">
         <swiper-item>
           <image src="{{item}}" class="swimage"></image>
         </swiper-item>
