--- a/pages/index/distribution/distribution.wxml
+++ b/pages/index/distribution/distribution.wxml
@@ -1,4 +1,4 @@
-<import src="../../libs/weimport.wxml" />
+<import src="../../../libs/weimport.wxml" />
 <view class="page">
   <view class="page__hd">己设置分销策略的产品</view>
   <view class="page__bd">
@@ -30,7 +30,7 @@
     <view class="weui-cells" wx:if="{{sProObjectId}}">
       <form bindsubmit="fSave">
         <block wx:for="{{reqData}}" wx:key="index">
-          <template is="i_{{item.t}}" data="{{...item,c:0,n:index}}"></template>
+          <template is="i_{{item.t}}" data="{{...item,c:vData[item.gname],n:index}}"></template>
         </block>
         <button class="weui-btn" formType="submit">设置(设置后不可修改！)</button>
       </form>
