--- a/pages/index/accounting/accounting.wxml
+++ b/pages/index/accounting/accounting.wxml
@@ -1,2 +1,36 @@
-<!--pages/customer/accounting/accounting.wxml-->
-<text>pages/customer/accounting/accounting.wxml</text>
+<import src="../../../libs/weimport.wxml" />
+<import src="../../../libs/wedetail.wxml"/>
+<view class="page">
+  <view class="page__hd weui-cells">
+    <form bindsubmit="orderquery">
+      <template is="i_sedate" data="{{...reqData[0],c:vData.sedate,n:0}}"></template>
+      <button class="weui-btn" formType="submit">查询该时间段交易</button>
+    </form>
+  </view>
+
+  <view class="page__bd">
+    <block wx:for="{{mPage}}" wx:key="{{index}}" wx:for-item="pro" wx:for-index="i">
+      <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+        <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+          <image class="weui-media-box__thumb" src="{{pageData[pro].thumbnail}}" background-size="cover"></image>
+        </view>
+        <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+          <view class="weui-media-box__title">{{pageData[sp].uName}}</view>
+          <view class="weui-media-box__desc">产品收入{{sumpro[pro]}}</view>
+        </view>
+      </view>
+      <block" wx:for="{{specPage[pro]}}" wx:key="{{index}}" wx:for-item="spec" wx:for-index="j">
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{spec}}" bindtap="idcheck">
+          <template is="{{ achecked==spec ? 'selecticon1' : 'selecticon2'}}" />
+          <view class="weui-cell__ft weui-cell__ft_in-access">{{specData[spec].uName}} 收入{{sumspec[spec]}}</view>
+        </view>
+        <view wx:if="{{achecked==spec}}">
+          <view class="weui-cell" wx:for="{{specOrder}}" wx:key="{{index}}">
+            <view class="weui-cell__bd">{{item.p}}:</view>
+            <view class="weui-cell__ft">{{aValue[item.gname]}}</view>
+          </view>
+        </view>
+      </block>
+    </block>
+  </view>
+</view>
