--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -4,7 +4,7 @@
   <view class="page__bd">
     <block wx:for="{{oArray}}" wx:key="{{index}}" wx:for-item="ac" wx:for-index="i">
       <view class="weui-cells">
-        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="ac-{{i}}" bindtap="accheck">
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="ac-{{i}}" bindtap="idcheck">
           <template is="{{ achecked==i ? 'selecticon1' : 'selecticon2'}}" />
           <view class="weui-cell__bd">{{req.p}}</view>
           <view class="weui-cell__ft weui-cell__ft_in-access">{{ac}}</view>
