--- a/pages/index/accounting/accounting.wxml
+++ b/pages/index/accounting/accounting.wxml
@@ -3,13 +3,13 @@
 <view class="page">
   <view class="page__hd weui-cells">
     <form bindsubmit="orderquery">
-      <template is="i_sedate" data="{{...reqData[0],c:vData.sedate,n:0}}"></template>
+      <template is="i_sedate" data="{{...reqData[0],c:vData.seDate,n:0}}"></template>
       <button class="weui-btn" formType="submit">查询该时间段交易</button>
     </form>
   </view>
 
   <view class="page__bd">
-    <block wx:for="{{mPage}}" wx:key="{{index}}" wx:for-item="pro" wx:for-index="i">
+    <block wx:for="{{mPage}}" wx:key="{{index}}" wx:for-item="pro">
       <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
         <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
           <image class="weui-media-box__thumb" src="{{pageData[pro].thumbnail}}" background-size="cover"></image>
@@ -19,15 +19,16 @@
           <view class="weui-media-box__desc">产品收入{{sumpro[pro]}}</view>
         </view>
       </view>
-      <block" wx:for="{{specPage[pro]}}" wx:key="{{index}}" wx:for-item="spec" wx:for-index="j">
+      <block wx:for="{{specPage[pro]}}" wx:key="{{index}}" wx:for-item="spec">
         <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{spec}}" bindtap="idcheck">
           <template is="{{ achecked==spec ? 'selecticon1' : 'selecticon2'}}" />
           <view class="weui-cell__ft weui-cell__ft_in-access">{{specData[spec].uName}} 收入{{sumspec[spec]}}</view>
         </view>
         <view wx:if="{{achecked==spec}}">
           <view class="weui-cell" wx:for="{{specOrder}}" wx:key="{{index}}">
-            <view class="weui-cell__bd">{{item.p}}:</view>
-            <view class="weui-cell__ft">{{aValue[item.gname]}}</view>
+            <view class="weui-cell__hd">{{item.user}}:</view>
+            <view class="weui-cell__bd">于{{item.paidAt}}</view>
+            <view class="weui-cell__ft">{{item.amount}}</view>
           </view>
         </view>
       </block>
