--- a/util/confirmation/confirmation.wxml
+++ b/util/confirmation/confirmation.wxml
@@ -1,5 +1,5 @@
-<import src="../../../libs/weimport.wxml"/>
-<import src="../../../libs/wedetail.wxml"/>
+<import src="../../libs/weimport.wxml"/>
+<import src="../../libs/wedetail.wxml"/>
 <view class="page">
   <view class="page__bd">
     <block wx:for="{{oArray}}" wx:key="{{index}}" wx:for-item="ac" wx:for-index="i">
@@ -28,3 +28,19 @@
     </block>
   </view>
 </view>
+<template name="i_sivers">
+  <view class="weui-cell">订单:{{p.orders.uName}}
+  未出品规格：{{p.shelves.uName}}</view>
+  <switch class="weui-cell__hd"/>规格：{{p.shelves.uName}} 出品包装号
+  <view class="weui-cell__ft">运送单号：</view>
+  <input name="{{c}}" value="{{p.quantity}}" />
+</template>
+
+<template name="i_adds">
+  <view class="weui-cell">位置：
+  订单:{{p.orders.uName}}
+  运送单号：{{p.shelves.uName}}</view>
+  <switch class="weui-cell__hd"/>规格：{{p.shelves.uName}} 出品包装号
+  <view class="weui-cell__ft">扫码确认：</view>
+  <input name="{{c}}" value="{{p.quantity}}" />
+</template>
