--- a/pages/supply/supply.wxml
+++ b/pages/supply/supply.wxml
@@ -4,26 +4,49 @@
   <view class="page__bd">
     <block wx:for="{{indexList}}" wx:key="{{index}}" wx:for-item="ac" wx:for-index="i">
       <view class="weui-cells">
-        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="idcheck">
-          <template is="{{ achecked==ac ? 'selecticon1' : 'selecticon2'}}" />
-          <view class="weui-cell__hd">{{pageData[mPage[ac][0]].proName}}</view>
-          <view class="weui-cell__bd">{{pageData[mPage[ac][0]].specName}}</view>
+        <view wx:if="{{oState==0}}">
+          <form bindsubmit="Supplies">
+            <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="idcheck">
+              <template is="{{ achecked==ac ? 'selecticon1' : 'selecticon2'}}" />
+              <view class="weui-cell__hd">{{pageData[mPage[ac][0]].proName}}</view>
+              <view class="weui-cell__bd">{{pageData[mPage[ac][0]].specName}} 可供{{specStock[ac]}}份</view>
+              <view class="weui-cell__ft weui-cell__ft_in-access">
+                <button class="weui-btn" type="primary" size="mini" formType="submit" id="{{ac}}">确认{{quantity[ac]}}份</button>
+              </view>
+            </view>
+            <view hidden="{{achecked!=ac}}">
+              <checkbox-group name="chSpec-{{ac}}" bindchange="checkboxChange">
+                <block class="weui-agree" wx:for="{{mPage[ac]}}">
+                  <checkbox clase="weui-agree__checkbox" value="{{item}}" checked="{{mCheck[item]}}">{{pageData[item].address}}
+                  <view clase="weui-agree__text">于pageData[id].paidAt,订pageData[id].quantity</view>
+                  </checkbox>
+                </block>
+              </checkbox-group>
+            </view>
+          </form>
         </view>
-        <form bindsubmit="fOrder">
-          <view class="weui-cell__bd">可供{{specStock[ac]}}份</view>
-          <view class="weui-cell__ft weui-cell__ft_in-access">
-            <button class="weui-btn" type="primary" size="mini" formType="submit" id="{{ac}}">确认{{quantity[ac]}}份</button>
-          </view>
-          <view hidden="{{achecked!=ac}}">
-            <checkbox-group name="chSpec-{{ac}}" bindchange="checkboxChange">
-              <block class="weui-agree" wx:for="{{mPage[ac]}}">
-                <checkbox clase="weui-agree__checkbox" value="{{item}}" checked="{{mCheck[item]}}">{{pageData[item].address}}
-                <view clase="weui-agree__text">于pageData[id].paidAt,订pageData[id].quantity</view>
-                </checkbox>
-              </block>
-            </checkbox-group>
-          </view>
-        </form>
+        <view wx:else>
+          <view class="weui-cell">地址:{{specStock[ac]}}份</view>
+          <form bindsubmit="fOrder">
+            <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="idcheck">
+              <template is="{{ achecked==ac ? 'selecticon1' : 'selecticon2'}}" />
+              <view class="weui-cell__hd">{{pageData[mPage[ac][0]].proName}}</view>
+              <view class="weui-cell__bd">{{pageData[mPage[ac][0]].specName}} 可供{{specStock[ac]}}份</view>
+              <view class="weui-cell__ft weui-cell__ft_in-access">
+                <button class="weui-btn" type="primary" size="mini" formType="submit" id="{{ac}}">确认{{quantity[ac]}}份</button>
+              </view>
+            </view>
+            <view hidden="{{achecked!=ac}}">
+              <checkbox-group name="chSpec-{{ac}}" bindchange="checkboxChange">
+                <block class="weui-agree" wx:for="{{mPage[ac]}}">
+                  <checkbox clase="weui-agree__checkbox" value="{{item}}" checked="{{mCheck[item]}}">{{pageData[item].address}}
+                  <view clase="weui-agree__text">于pageData[id].paidAt,订pageData[id].quantity</view>
+                  </checkbox>
+                </block>
+              </checkbox-group>
+            </view>
+          </form>
+        </view>
       </view>
     </block>
   </view>
