--- a/pages/supply/supply.wxml
+++ b/pages/supply/supply.wxml
@@ -9,7 +9,7 @@
             <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="idcheck">
               <template is="{{ achecked==ac ? 'selecticon1' : 'selecticon2'}}" />
               <view class="weui-cell__hd">{{pageData[mPage[ac][0]].proName}}</view>
-              <view class="weui-cell__bd">{{pageData[mPage[ac][0]].specName}} 可供{{specStock[ac]}}份</view>
+              <view class="weui-cell__bd">{{pageData[mPage[ac][0]].cargoName}} 可供{{specStock[ac]}}份</view>
               <view class="weui-cell__ft weui-cell__ft_in-access">
                 <button class="weui-btn" type="primary" size="mini" formType="submit" id="{{ac}}">确认{{quantity[ac]}}份</button>
               </view>
@@ -31,7 +31,7 @@
             <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="idcheck">
               <template is="{{ achecked==ac ? 'selecticon1' : 'selecticon2'}}" />
               <view class="weui-cell__hd">{{pageData[mPage[ac][0]].proName}}</view>
-              <view class="weui-cell__bd">{{pageData[mPage[ac][0]].specName}} 可供{{specStock[ac]}}份</view>
+              <view class="weui-cell__bd">{{pageData[mPage[ac][0]].cargoName}} 可供{{specStock[ac]}}份</view>
               <view class="weui-cell__ft weui-cell__ft_in-access">
                 <button class="weui-btn" type="primary" size="mini" formType="submit" id="{{ac}}">确认{{quantity[ac]}}份</button>
               </view>
