--- a/pages/supply/supply.wxml
+++ b/pages/supply/supply.wxml
@@ -6,15 +6,15 @@
       <view class="weui-cells">
         <view wx:if="{{oState==0}}">
           <form bindsubmit="fSupplies">
-            <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="idcheck">
-              <template is="{{ achecked==ac ? 'selecticon1' : 'selecticon2'}}" />
+            <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="indexClick">
+              <template is="{{ iClicked==ac ? 'selecticon1' : 'selecticon2'}}" />
               <view class="weui-cell__hd">{{pageData[mPage[ac][0]].proName}}</view>
               <view class="weui-cell__bd">{{pageData[mPage[ac][0]].cargoName}} 可供{{cargoCount[ac]}}份</view>
               <view class="weui-cell__ft weui-cell__ft_in-access">
                 <button class="weui-btn" type="primary" size="mini" formType="submit" id="{{ac}}">确认{{iSum[ac]}}份</button>
               </view>
             </view>
-            <view hidden="{{achecked!=ac}}">
+            <view hidden="{{iClicked!=ac}}">
               <checkbox-group name="chCargo-{{ac}}" bindchange="checkboxChange">
                 <block class="weui-agree" wx:for="{{mPage[ac]}}" wx:key="{{index}}">
                   <checkbox clase="weui-agree__checkbox" value="{{item}}" checked="{{mChecked[item]}}">{{pageData[item].address}}
@@ -26,28 +26,40 @@
           </form>
         </view>
         <view wx:else>
+          <template is="{{ iClicked==ac ? 'selecticon1' : 'selecticon2'}}" />
           <view class="weui-cell">地址:{{ac}}</view>
           <view class="weui-cell">应发{{qCount[ac]}}份 已包{{iSum[ac]}}份</view>
-          <form class="weui-cell" bindsubmit="fPackingId">
-            <view class="weui-cell__hd">出品包装号</view>
-            <<input name="nowPacking" value="{{}}" />
-            <button class="weui-btn" type="primary" size="mini" formType="submit" id="{{ac}}">确认{{quantity[ac]}}份</button>
-          </form>
-            <block class="weui-agree" wx:for="{{mPage[ac]}}" wx:key="{{index}}" wx:for-index="i">
-              <form bindsubmit="fSupplies">
-
-                <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="idcheck">
-              <template is="{{ achecked==ac ? 'selecticon1' : 'selecticon2'}}" />
-              <view class="weui-cell__hd">{{pageData[item].proName}}</view>
-              <view class="weui-cell__bd">{{pageData[item].cargoName}}</view>
-              <view class="weui-cell__ft weui-cell__ft_in-access">
-                <button class="weui-btn" type="primary" size="mini" formType="submit" id="{{ac}}">确认{{quantity[ac]}}份</button>
-              </view>
+          <view hidden="{{iClicked!=ac}}">
+            <view class="weui-search-bar">
+              <view class="weui-search-bar__label">出品包装号</view>
+              <form class="weui-search-bar__form" bindsubmit="fPackingId">
+                <<inputclass="weui-search-bar__input" name="nowPacking" value="{{npId}}" />
+                <button class="weui-search-bar__cancel-btn" type="primary" size="mini" formType="submit" id="{{ac}}">{{oState==1 ? '' : ''}}份</button>
+              </form>
             </view>
-            <view hidden="{{achecked!=ac}}">
+            <block class="weui-agree" wx:for="{{mPage[ac]}}" wx:key="{{index}}" wx:for-index="i">
+              <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{item}}" bindtap="mChick">
+                <view class="weui-cell__hd">{{pageData[item].proName}}</view>
+                <view class="weui-cell__bd">{{pageData[item].cargoName}}</view>
+                <view class="weui-cell__ft weui-cell__ft_in-access">订{{pageData[item].quantity}}</view>
+              </view>
+              <view wx:if="{{{mChecked[item]}}">
+              <form bindsubmit="fSupplies">
+                <view
+
+
+            <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="indexClick">
+
+
+                <checkbox clase="weui-agree__checkbox" value="{{item}}" checked="{}}">
+
+                  <button class="weui-btn" type="primary" size="mini" formType="submit" id="{{ac}}">确认{{quantity[ac]}}份</button>
+                </view>
+
+
               <checkbox-group name="chCargo-{{ac}}" bindchange="checkboxChange">
 
-                  <checkbox clase="weui-agree__checkbox" value="{{item}}" checked="{{mChecked[item]}}">{{pageData[item].address}}
+                  {{pageData[item].address}}
                   <view clase="weui-agree__text">于pageData[id].paidAt,订pageData[id].quantity</view>
                   </checkbox>
                 </block>
